@@ -10,7 +10,6 @@ import java.awt.Toolkit;
 import java.util.ArrayList;
 
 import javax.swing.BorderFactory;
-import javax.swing.JApplet;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JOptionPane;
@@ -62,7 +61,7 @@ import org.opensha.commons.param.impl.WarningIntegerParameter;
  */
 
 public class ParameterApplet
-         extends JApplet
+         extends JFrame
          implements
         ParameterChangeListener,
         ParameterChangeFailListener,
@@ -80,7 +79,7 @@ public class ParameterApplet
 
     final static int NUM = 6;
     static int paramCount = 0;
-    boolean isStandalone = false;
+    boolean isStandalone = true;
     GridBagLayout gridBagLayout1 = new GridBagLayout();
     GridBagLayout gridBagLayout2 = new GridBagLayout();
 
@@ -97,9 +96,7 @@ public class ParameterApplet
      * @return      The parameter value
      */
     public String getParameter( String key, String def ) {
-        return ( isStandalone ? System.getProperty( key, def )
-                 : this.getParameter( key ) != null ? this.getParameter( key )
-                 : def );
+        return (System.getProperty( key, def ));
     }
 
     /**
@@ -246,8 +243,8 @@ public class ParameterApplet
     
     
     private Parameter makeParameterListParameter(){
-      DoubleParameter param1 = new DoubleParameter("param1",new Double(.01));
-      DoubleParameter param2 = new DoubleParameter("param2",new Double(.02));
+      DoubleParameter param1 = new DoubleParameter("param1",Double.valueOf(.01));
+      DoubleParameter param2 = new DoubleParameter("param2",Double.valueOf(.02));
       ParameterList paramList = new ParameterList();
       paramList.addParameter(param1);
       paramList.addParameter(param2);
@@ -273,13 +270,13 @@ public class ParameterApplet
         String value = "12.1";
         paramCount++;
         ArrayList val = new ArrayList();
-        val.add( new Double( 11.1 ) );
-        val.add( new Double( 12.1 ) );
-        val.add( new Double( 13.1 ) );
+        val.add( Double.valueOf( 11.1 ) );
+        val.add( Double.valueOf( 12.1 ) );
+        val.add( Double.valueOf( 13.1 ) );
         DoubleDiscreteConstraint constraint
                  = new DoubleDiscreteConstraint( val );
         DoubleDiscreteParameter param
-                 = new DoubleDiscreteParameter( name, constraint, "sec.", new Double( 12.1 ) );
+                 = new DoubleDiscreteParameter( name, constraint, "sec.", Double.valueOf( 12.1 ) );
         param.addParameterChangeFailListener(this);
         param.addParameterChangeListener(this);
         return param;
@@ -290,7 +287,7 @@ public class ParameterApplet
         String name = "Integer Parameter";
         String value = "1" + paramCount;
         paramCount++;
-        IntegerParameter param = new IntegerParameter( name, new Integer( value ) );
+        IntegerParameter param = new IntegerParameter( name, Integer.valueOf( value ) );
         param.addParameterChangeFailListener(this);
         param.addParameterChangeListener(this);
 
@@ -312,7 +309,7 @@ public class ParameterApplet
         String value = "1" + paramCount;
         paramCount++;
         IntegerConstraint constraint = new IntegerConstraint( -180, 180 );
-        IntegerParameter param = new IntegerParameter( name, constraint, "degrees", new Integer( value ) );
+        IntegerParameter param = new IntegerParameter( name, constraint, "degrees", Integer.valueOf( value ) );
         param.addParameterChangeFailListener(this);
         param.addParameterChangeListener(this);
 
@@ -326,8 +323,7 @@ public class ParameterApplet
       paramCount++;
       IntegerConstraint constraint = new IntegerConstraint( -200, 200 );
       IntegerConstraint warnConstraint = new IntegerConstraint( -100, 100 );
-      WarningIntegerParameter param= new WarningIntegerParameter(name,constraint,"degrees",
-                                     new Integer ( value));
+      WarningIntegerParameter param= new WarningIntegerParameter(name,constraint,"degrees", Integer.valueOf( value));
       param.setWarningConstraint(warnConstraint);
       param.addParameterChangeWarningListener(this);
       param.addParameterChangeFailListener(this);
@@ -343,7 +339,7 @@ public class ParameterApplet
       DoubleConstraint constraint = new DoubleConstraint( -120, 120 );
       DoubleConstraint warn = new DoubleConstraint(-60,60);
       WarningDoubleParameter param= new WarningDoubleParameter(name,constraint,"degrees",
-          new Double( value));
+          Double.valueOf( value));
       param.setWarningConstraint(warn);
       param.addParameterChangeWarningListener(this);
       param.addParameterChangeFailListener(this);
@@ -357,7 +353,7 @@ public class ParameterApplet
         String value = "12." + paramCount;
         paramCount++;
         DoubleConstraint constraint = new DoubleConstraint( 0.0, 20.0 );
-        DoubleParameter param = new DoubleParameter( name, constraint, "acres", new Double( value ) );
+        DoubleParameter param = new DoubleParameter( name, constraint, "acres", Double.valueOf( value ) );
         param.addParameterChangeFailListener(this);
         param.addParameterChangeListener(this);
 
@@ -421,31 +417,27 @@ public class ParameterApplet
      */
     public static void main( String[] args ) {
 
-        Double d1 = new Double(1);
-        Double d2 = new Double( Double.NaN );
+        Double d1 = Double.valueOf(1);
+        Double d2 = Double.valueOf( Double.NaN );
         Double d3 = null;
 
         //System.out.println("" + d1.compareTo(d3));
 
-
-
-
         ParameterApplet applet = new ParameterApplet();
         applet.isStandalone = true;
 
-        JFrame frame = new JFrame();
-        frame.setDefaultCloseOperation( 3 );
-        frame.setTitle( "Applet Frame" );
-        frame.getContentPane().add( applet, "Center" );
+        applet.setDefaultCloseOperation( 3 );
+        applet.setTitle( "Applet Frame" );
+//        applet.getContentPane().add( applet, "Center" );
 
         applet.init();
         applet.start();
 
-        frame.setSize( 400, 320 );
+        applet.setSize( 400, 320 );
         Dimension d = Toolkit.getDefaultToolkit().getScreenSize();
-        frame.setLocation( ( d.width - frame.getSize().width ) / 2,
-                ( d.height - frame.getSize().height ) / 2 );
-        frame.setVisible( true );
+        applet.setLocation( ( d.width - applet.getSize().width ) / 2,
+                ( d.height - applet.getSize().height ) / 2 );
+        applet.setVisible( true );
     }
 
     /**
