@@ -290,7 +290,7 @@ public class EditFaultSection extends JFrame implements ActionListener, Paramete
 		float dipDirection = this.selectedFaultSection.getDipDirection();
 		Double val;
 		if(Double.isNaN(dipDirection)) val = null;
-		else val = new Double(dipDirection);
+		else val = Double.valueOf(dipDirection);
 		dipDirectionParam = new DoubleParameter(DIP_DIRECTION, MIN_DIP_DIRECTION, MAX_DIP_DIRECTION, val);
 		if (val == null && selectedFaultSection.getFaultTrace() != null) {
 			dipDirectionParam.setInfo("No value stored in db.\nCalculated value would be: "
