@@ -1,15 +1,19 @@
 package org.opensha.sha.earthquake;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.util.ListIterator;
 
+import org.opensha.commons.data.Site;
 import org.opensha.commons.data.TimeSpan;
 import org.opensha.commons.geo.Location;
 import org.opensha.commons.geo.Region;
 import org.opensha.commons.param.Parameter;
 import org.opensha.commons.param.ParameterList;
+import org.opensha.sha.calc.params.filters.SourceFilter;
 import org.opensha.sha.util.TectonicRegionType;
 
 /**
@@ -74,8 +78,8 @@ public class ERFSubset implements ERF {
 	}
 
 	@Override
-	public ArrayList<EqkRupture> drawRandomEventSet() {
-		throw new RuntimeException("WARNING: drawRandomEventSet not implemented for test ERF!");
+	public List<EqkRupture> drawRandomEventSet(Site site, Collection<SourceFilter> sourceFilters) {
+		throw new RuntimeException("WARNING: drawRandomEventSet not implemented for subset ERF!");
 	}
 
 	@Override
@@ -100,7 +104,7 @@ public class ERFSubset implements ERF {
 	}
 	
 	private int getBaseSourceID(int sourceID) {
-		return sourceIDMap.get(new Integer(sourceID));
+		return sourceIDMap.get(Integer.valueOf(sourceID));
 	}
 
 	@Override
@@ -113,14 +117,14 @@ public class ERFSubset implements ERF {
 	}
 	
 	public void includeSource(int sourceID) {
-		if (sourceIDMap.containsValue(new Integer(sourceID))) {
+		if (sourceIDMap.containsValue(Integer.valueOf(sourceID))) {
 			System.out.println("source "+sourceID+" already included!");
 			return; // it's already included
 		}
 		if (sourceID < 0 || sourceID >= baseERF.getNumSources())
 			throw new IndexOutOfBoundsException("source ID to include is out of bounds!");
 		int newID = this.getNumSources();
-		sourceIDMap.put(new Integer(newID), new Integer(sourceID));
+		sourceIDMap.put(Integer.valueOf(newID), Integer.valueOf(sourceID));
 	}
 	
 	public void includeAllExcept(int sourceID) {
