@@ -539,7 +539,7 @@ public class GcimCalculator_extensionForAutomatedGMSelection {
 	
 	private static void setSAPeriodInIMR(ScalarIMR imr, double period) {
 		((Parameter<Double>)imr.getIntensityMeasure())
-		.getIndependentParameter(PeriodParam.NAME).setValue(new Double(period));
+		.getIndependentParameter(PeriodParam.NAME).setValue(Double.valueOf(period));
 	}
 	
 	/**
