@@ -23,10 +23,10 @@ public class Ds575_Param extends WarningDoubleParameter {
     public final static String NAME = "Ds575"; 
     public final static String UNITS = "s"; 
     public final static String INFO = "Significant Duration (5-75%)"; 
-    public final static Double MIN = new Double(Math.log(Double.MIN_VALUE)); 
-    public final static Double MAX = new Double(Double.MAX_VALUE); 
-    public final static Double DEFAULT_WARN_MIN = new Double(Math.log(Double.MIN_VALUE)); 
-    public final static Double DEFAULT_WARN_MAX = new Double(Math.log(4.0));
+    public final static Double MIN = Double.valueOf(Math.log(Double.MIN_VALUE)); 
+    public final static Double MAX = Double.valueOf(Double.MAX_VALUE); 
+    public final static Double DEFAULT_WARN_MIN = Double.valueOf(Math.log(Double.MIN_VALUE)); 
+    public final static Double DEFAULT_WARN_MAX = Double.valueOf(Math.log(4.0));
 
 
 	/**
