@@ -17,6 +17,7 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.Set;
 
+import org.apache.commons.math3.util.Precision;
 import org.opensha.commons.data.TimeSpan;
 import org.opensha.commons.data.function.ArbDiscrEmpiricalDistFunc;
 import org.opensha.commons.data.function.ArbitrarilyDiscretizedFunc;
@@ -56,10 +57,15 @@ import org.opensha.sha.earthquake.ProbEqkSource;
 import org.opensha.sha.earthquake.calc.ERF_Calculator;
 import org.opensha.sha.earthquake.faultSysSolution.FaultSystemRupSet;
 import org.opensha.sha.earthquake.faultSysSolution.modules.GridSourceProvider;
+import org.opensha.sha.earthquake.faultSysSolution.modules.MFDGridSourceProvider;
 import org.opensha.sha.earthquake.faultSysSolution.modules.PolygonFaultGridAssociations;
 import org.opensha.sha.earthquake.faultSysSolution.modules.SubSeismoOnFaultMFDs;
+import org.opensha.sha.earthquake.param.BackgroundRupType;
 import org.opensha.sha.earthquake.param.ProbabilityModelOptions;
 import org.opensha.sha.earthquake.param.ProbabilityModelParam;
+import org.opensha.sha.earthquake.rupForecastImpl.PointSource13b.PointSurface13b;
+import org.opensha.sha.earthquake.rupForecastImpl.PointSourceNshm;
+import org.opensha.sha.earthquake.rupForecastImpl.PointSourceNshm.PointSurfaceNshm;
 import org.opensha.sha.faultSurface.AbstractEvenlyGriddedSurface;
 import org.opensha.sha.faultSurface.EvenlyGriddedSurface;
 import org.opensha.sha.faultSurface.FaultSection;
@@ -959,7 +965,7 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 			if(cubeDistMap != null) {	// null for some Mendocino sections because they are outside the RELM region
 				for(int cubeIndex:cubeDistMap.keySet()) {
 					sectAtPointList.get(cubeIndex).add(s);
-					sectDistToPointList.get(cubeIndex).add(new Float(cubeDistMap.get(cubeIndex)));
+					sectDistToPointList.get(cubeIndex).add(cubeDistMap.get(cubeIndex).floatValue());
 				}			
 			}
 		}
@@ -1061,7 +1067,7 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 	 * @return
 	 */
 	private int[] getOrigGridSeisTrulyOffVsSubSeisStatus() {
-		GridSourceProvider gridSrcProvider = ((FaultSystemSolutionERF)erf).getSolution().getGridSourceProvider();
+		MFDGridSourceProvider gridSrcProvider = ((FaultSystemSolutionERF)erf).getSolution().requireModule(MFDGridSourceProvider.class);
 //		InversionFaultSystemRupSet rupSet = (InversionFaultSystemRupSet)((FaultSystemSolutionERF)erf).getSolution().getRupSet();
 //		FaultPolyMgr faultPolyMgr = rupSet.getInversionTargetMFDs().getGridSeisUtils().getPolyMgr();
 		int numGridLocs = gridSrcProvider.getGriddedRegion().getNodeCount();
@@ -4211,28 +4217,64 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 		else { // it's a gridded seis source
 			
 			int gridRegionIndex = randSrcIndex-numFltSystSources;
-			ProbEqkSource src=null;
-			if(origGridSeisTrulyOffVsSubSeisStatus[gridRegionIndex] == 2) {	// it has both truly off and sub-seismo components
-				int[] regAndDepIndex = getCubeRegAndDepIndicesForIndex(aftShCubeIndex);
-				int isSubSeismo = isCubeInsideFaultPolygon[regAndDepIndex[0]];
-				if(isSubSeismo == 1) {
-					src = ((FaultSystemSolutionERF)erf).getSourceSubSeisOnly(randSrcIndex);
+			ProbEqkSource src = erf.getSource(randSrcIndex);
+			int randRupIndex;
+			if (src.getNumRuptures() == 1) {
+				randRupIndex = 0; // just use the only rupture
+			} else {
+				Preconditions.checkState(src.getNumRuptures() > 1);
+				// more than 1, need to randomly sample a rupture
+				
+				if (origGridSeisTrulyOffVsSubSeisStatus[gridRegionIndex] == 2) {	// it has both truly off and sub-seismo components
+					// figure out if this cube is inside the polygon, then choose a random rupture from the off or sub-seismo
+					// MFD as appropriate
+					int[] regAndDepIndex = getCubeRegAndDepIndicesForIndex(aftShCubeIndex);
+					int isSubSeismo = isCubeInsideFaultPolygon[regAndDepIndex[0]];
+					MFDGridSourceProvider gridProv = ((FaultSystemSolutionERF)erf).getSolution().requireModule(MFDGridSourceProvider.class);
+					ProbEqkSource filteredSrc;
+					if(isSubSeismo == 1)
+						filteredSrc = gridProv.getSourceSubSeisOnFault(gridRegionIndex,
+								erf.getTimeSpan().getDuration(), null, BackgroundRupType.POINT);
+					else
+						filteredSrc = gridProv.getSourceUnassociated(gridRegionIndex,
+								erf.getTimeSpan().getDuration(), null, BackgroundRupType.POINT);
+					int filteredR = filteredSrc.drawSingleRandomEqkRuptureIndex(etas_utils.getRandomDouble());
+					ProbEqkRupture filteredRup = filteredSrc.getRupture(filteredR);
+					randRupIndex = -1;
+					// find match in the original source; this is needed for the nth rupture index to be real in the
+					// output files, see issue #120: https://github.com/opensha/opensha/issues/120
+					
+					// we'll find it by finding a rupture in the original source with the same magnitude, rake,
+					// and footwall setting (there can be 2 versions of the dipping ruptures that are programmed to be
+					// on/off the footwall). This is pretty specific to the UCERF3 point source implementation (with
+					// distance corrected point surface, e.g. from PointSource13b), and should be generalized in
+					// future models. Checks are made to ensure that exactly 1 mapping is found, so if those assumptions
+					// break down those checks should fail (e.g., with multiple mappings found).
+					boolean footwall = ptRupFootwallTest(filteredRup);
+					for (int r=0; r<src.getNumRuptures(); r++) {
+						ProbEqkRupture rup = src.getRupture(r);
+						boolean match = Precision.equals(rup.getAveRake(), filteredRup.getAveRake())
+								&& Precision.equals(rup.getMag(), filteredRup.getMag())
+								&& footwall == ptRupFootwallTest(rup);
+						if (match) {
+							Preconditions.checkState(randRupIndex < 0, "Multiple rupture mappings? sourceID=%s, subSeismo=%s,"
+									+ "filteredR=%s, mag=%s, rake=%s, sourceType=%s, surfType=%s",
+									randSrcIndex, isSubSeismo, filteredR, filteredRup.getMag(), filteredRup.getAveRake(),
+									filteredSrc.getClass().getName(), filteredRup.getRuptureSurface().getClass().getName());
+							randRupIndex = r;
+						}
+					}
+					Preconditions.checkState(randRupIndex >= 0, "No rupture mapping found sourceID=%s, subSeismo=%s,"
+										+ "filteredR=%s, mag=%s, rake=%s, sourceType=%s, surfType=%s",
+										randSrcIndex, isSubSeismo, filteredR, filteredRup.getMag(), filteredRup.getAveRake(),
+										filteredSrc.getClass().getName(), filteredRup.getRuptureSurface().getClass().getName());
+				} else {
+					randRupIndex = src.drawSingleRandomEqkRuptureIndexFromRelativeRates(etas_utils.getRandomDouble());
 				}
-				else {
-					src = ((FaultSystemSolutionERF)erf).getSourceTrulyOffOnly(randSrcIndex);
-				}
-			}
-			else {
-				src = erf.getSource(randSrcIndex);
 			}
 			
-			
-			int r=0;
-			if(src.getNumRuptures() > 1) {
-				r = src.drawSingleRandomEqkRuptureIndexFromRelativeRates(etas_utils.getRandomDouble());
-			}
-			int nthRup = erf.getIndexN_ForSrcAndRupIndices(randSrcIndex,r);
-			ProbEqkRupture erf_rup = src.getRupture(r);
+			int nthRup = erf.getIndexN_ForSrcAndRupIndices(randSrcIndex,randRupIndex);
+			ProbEqkRupture erf_rup = src.getRupture(randRupIndex);
 
 			double relLat = latForCubeCenter[aftShCubeIndex]-translatedParLoc.getLatitude();
 			double relLon = lonForCubeCenter[aftShCubeIndex]-translatedParLoc.getLongitude();
@@ -4330,6 +4372,18 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 		rupToFillIn.setDistanceToParent(distToParent);
 		
 		return true;
+	}
+	
+	private static final Location ptStrFootwallTestLoc = new Location(0d, 0d);
+	private static boolean ptRupFootwallTest(ProbEqkRupture rup) {
+		RuptureSurface surf = rup.getRuptureSurface();
+		if (surf.getAveDip() == 90d)
+			return false;
+		if (surf instanceof PointSurfaceNshm)
+			return ((PointSurfaceNshm)surf).isOnFootwall();
+		if (surf instanceof PointSurface13b)
+			return ((PointSurface13b)surf).isOnFootwall();
+		return surf.getDistanceX(ptStrFootwallTestLoc) < 0;
 	}
 	
 	/**
@@ -4879,14 +4933,21 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 		mfdForSrcSubSeisOnlyArray = new SummedMagFreqDist[erf.getNumSources()];
 		mfdForTrulyOffOnlyArray = new SummedMagFreqDist[erf.getNumSources()];
 		double duration = erf.getTimeSpan().getDuration();
+		MFDGridSourceProvider mfdGridProv = null;
+		if (erf instanceof FaultSystemSolutionERF)
+			mfdGridProv = ((FaultSystemSolutionERF) erf).getSolution().requireModule(MFDGridSourceProvider.class);
 		for(int s=0; s<erf.getNumSources();s++) {
 			mfdForSrcArray[s] = ERF_Calculator.getTotalMFD_ForSource(erf.getSource(s), duration, minMag, maxMag, numMag, true);
-			if(erf instanceof FaultSystemSolutionERF) {
+			if (mfdGridProv != null) {
 				if(s >= numFltSystSources) {	// gridded seismicity source
 					int gridRegionIndex = s-numFltSystSources;
 					if(origGridSeisTrulyOffVsSubSeisStatus[gridRegionIndex] == 2) {	// it has both truly off and sub-seismo components
-						mfdForSrcSubSeisOnlyArray[s] = ERF_Calculator.getTotalMFD_ForSource(fssERF.getSourceSubSeisOnly(s), duration, minMag, maxMag, numMag, true);;
-						mfdForTrulyOffOnlyArray[s] = ERF_Calculator.getTotalMFD_ForSource(fssERF.getSourceTrulyOffOnly(s), duration, minMag, maxMag, numMag, true);;					}
+						mfdForSrcSubSeisOnlyArray[s] = ERF_Calculator.getTotalMFD_ForSource(
+								mfdGridProv.getSourceSubSeisOnFault(gridRegionIndex, duration, null, BackgroundRupType.POINT),
+								duration, minMag, maxMag, numMag, true);;
+						mfdForTrulyOffOnlyArray[s] = ERF_Calculator.getTotalMFD_ForSource(
+								mfdGridProv.getSourceUnassociated(gridRegionIndex, duration, null, BackgroundRupType.POINT),
+								duration, minMag, maxMag, numMag, true);;					}
 					else if (origGridSeisTrulyOffVsSubSeisStatus[gridRegionIndex] == 1) { // it's all subseismo
 						mfdForSrcSubSeisOnlyArray[s] = mfdForSrcArray[s];
 						mfdForTrulyOffOnlyArray[s] = null;
@@ -6446,7 +6507,7 @@ double maxCharFactor = maxRate/cubeRateBeyondDistThresh;
 		
 		ArrayList<Integer> idList = new ArrayList<Integer>();
 		for(int i=0;i<totNumSrc;i++)
-			idList.add(new Integer(i));
+			idList.add(Integer.valueOf(i));
 		
 		for (int i=0; i<size; i++) {
 			int listSize = in.readInt();
